# rudesession

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.ac
man3/: rudesession.3
src/: Base64Encoder.cpp  ConfigFilePersistance.cpp  DatabasePersistance.cpp  Implementation.cpp  Implementation.h
